--- a/app/src/main/res/color/bottom_nav_text_selector.xml
+++ b/app/src/main/res/color/bottom_nav_text_selector.xml
@@ -1,4 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Texto cuando está seleccionado -->
     <item android:color="@color/primary_green" android:state_checked="true" />
+    <item android:color="@color/primary_green" android:state_selected="true" />
+    <!-- Texto en estado normal -->
     <item android:color="@color/text_secondary" />
 </selector>
