--- a/app/src/main/res/drawable/particle_neon_blue.xml
+++ b/app/src/main/res/drawable/particle_neon_blue.xml
@@ -1,4 +1,3 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
     <solid android:color="@color/neon_blue" />
 </shape>
