--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:text="@string/popular_now"
             android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textColor="@color/primary_green"
+            android:textColor="@color/neon_blue"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="8"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:text="@string/recently_released"
             android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textColor="@color/accent_orange"
+            android:textColor="@color/neon_green"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="8"
@@ -98,7 +98,7 @@
             android:layout_height="wrap_content"
             android:text="@string/recommended_for_you"
             android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textColor="@color/accent_blue"
+            android:textColor="@color/neon_purple"
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="8"
