--- a/app/src/main/res/layout/dialog_custom_tags.xml
+++ b/app/src/main/res/layout/dialog_custom_tags.xml
@@ -80,7 +80,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_tags"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:layout_marginBottom="16dp" />
 
     <!-- Botones de acción -->
@@ -88,6 +88,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
         android:gravity="end">
 
         <com.google.android.material.button.MaterialButton
@@ -95,7 +96,7 @@
             style="@style/Widget.GameDex.Button.Outlined"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="12dp"
             android:text="Cancelar"
             android:textColor="@color/white"
             app:strokeColor="@color/white" />
